--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "workshop_make-your-own-codewars",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
